<resources>
    <string name="app_name">EmilioPizza</string>
    <string name="title">Emilio´s Pizza</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">Orders</string>
    <string name="historial">Historial</string>
    <string name="cart">Cart</string>
    <string name="item_descrip">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra sit amet quam eget rutrum. Suspendisse facilisis eu ipsum sit amet aliquet. Morbi tincidunt dignissim sem quis mollis. Cras nec magna in mi ornare rutrum nec quis ipsum. Nam ac nisi in massa ultrices faucibus. Suspendisse et sollicitudin metus, in congue justo.
    </string>
    <string name="addcart">Add</string>
    <string name="cartIcon">CartIcon</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="dateBorn">Born</string>
    <string name="phone">Phone</string>
    <string name="prefs_file">Preferents_file_data</string>
    <string name="prefs_dataUser">Prefs_data_user</string>
    <string name="pay">Pay</string>
    <string name="total">Total</string>
    <string name="price">Price</string>
    <string name="titleCart">My Orders</string>
    <string name="go">Go</string>
    <string name="countItems">Count</string>

</resources>