<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <group
        android:menuCategory="container"
        android:visible="true"
        >
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            >
        </item>
        <item
            android:id="@+id/order"
            android:title="@string/orders"
            >
        </item>
        <item
            android:id="@+id/cart"
            android:title="@string/cart"
            android:icon="@drawable/shopping_cart_24"
            app:showAsAction="always"
            >
        </item>
        <item
            android:id="@+id/historial"
            android:title="@string/historial"
            >
        </item>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            >
        </item>
    </group>
</menu>