<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.PanelFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10"
        android:layout_marginStart="@dimen/dimen_50"
        android:layout_marginEnd="@dimen/dimen_50"
        >
        <Button
            android:id="@+id/btnOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orders"
            style="@style/panelBtn"
            />
        <Button
            android:id="@+id/btnHistorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/historial"
            style="@style/panelBtn"

            />
        <Button
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            style="@style/panelBtn"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>