<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.CartFragment">

    <LinearLayout
        android:id="@+id/barList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/dimen_10"
        android:gravity="center_vertical"
        android:elevation="@dimen/dimen_5"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/local_pizza_24"
            />

        <TextView
            android:id="@+id/itemsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/countItems"
            android:layout_marginStart="@dimen/dimen_5"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/containerorderTaken"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barList"
        app:layout_constraintBottom_toTopOf="@id/payMethod"
        />

    <LinearLayout
        android:id="@+id/payMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/dimen_15"
        >
        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/price"
            android:textStyle="bold"
            android:textSize="@dimen/dimenSt_20"
            android:textColor="@color/teal_700"
            android:layout_marginBottom="@dimen/dimen_5"
            />
        <Button
            android:id="@+id/btnPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:textColor="@color/purple_700"
            android:layout_margin="@dimen/dimen_10"
            android:backgroundTint="@color/teal_200"
            android:paddingHorizontal="@dimen/dimen_80"
            android:paddingVertical="@dimen/dimen_15"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>