<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5"
        app:cardElevation="@dimen/dimen_5"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/img"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="@dimen/dimen_5"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5"
                android:layout_margin="@dimen/dimen_5"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="@dimen/dimen_5"
                    >
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimenSt_20"
                        android:text="@string/email"
                        />
                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/purple_500"
                        android:text="@string/email"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_descrip"
                        />
                    <Button
                        android:id="@+id/btnCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addcart"
                        android:layout_gravity="end"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>